--- a/.github/workflows/ubuntu.yaml
+++ b/.github/workflows/ubuntu.yaml
@@ -22,6 +22,7 @@ jobs:
               sudo apt update && sudo apt -y install \
                 software-properties-common \
                 qtbase5-dev \
+                libqtav-dev \
                 libqt5svg5-dev \
                 libqt5websockets5-dev \
                 libqt5opengl5-dev \
