Revert "build VideoViewer plugin on Linux"
This reverts commit a746332a66e68be6c3a581c3a5bf0a350234ef5e.

--- a/.github/workflows/openpilot.yaml
+++ b/.github/workflows/openpilot.yaml
@@ -6,8 +6,7 @@ env:
   ZIP: |
     cd $GITHUB_WORKSPACE/build/bin
     export PATH=/usr/local/opt/gnu-tar/libexec/gnubin:$PATH
-    test "$(uname)" = "Linux" && sudo tar -czf $(uname -s)-$(uname -m).tar.gz plotjuggler libDataLoadRlog.* libDataStreamCereal.* libPublisherVideoViewer.*
-    test ! "$(uname)" = "Linux" && sudo tar -czf $(uname -s)-$(uname -m).tar.gz plotjuggler libDataLoadRlog.* libDataStreamCereal.*
+    sudo tar -czf $(uname -s)-$(uname -m).tar.gz plotjuggler libDataLoadRlog.* libDataStreamCereal.*
 
 jobs:
   build_ubuntu:
